Initial commit, PitchBeast.com

--- a/index.html
+++ b/index.html
@@ -1,3 +1,204 @@
-<h1>
-Welcome to PitchBeast
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Pitch Deck Analysis for Startups | PitchBeast</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/logos/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/logos/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/logos/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/logos/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/logos/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/logos/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/logos/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/logos/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/logos/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/logos/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/logos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/logos/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/logos/favicon-16x16.png">
+    <link rel="manifest" href="assets/logos/manifest.json">
+
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/logos/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="PitchBeast"/>
+    <meta name="description" content="PitchBeast uses a proprietary AI and expert in-house team to analyze your pitch deck, offering instant recommendations.">
+
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Pitch Deck Analysis for Startups | PitchBeast"/>
+    <meta property="og:description" content="PitchBeast uses a proprietary AI and expert in-house team to analyze your pitch deck, offering instant recommendations."/>
+    <meta property="og:url" content="https://www.pitchbeast.com"/>
+
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/animate.css"> <!-- Resource style -->
+    <link rel="stylesheet" href="assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    <link rel="stylesheet" href="assets/css/ionicons.min.css"> <!-- Resource style -->
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+  </head>
+  <body>
+    <div class="wrapper">
+        <div class="container">
+          <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+          <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+              <a class="navbar-brand page-scroll" href="#main"><img src="assets/logos/logo.png" height="35" width="217" alt="Logo" /></a>
+              </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a class="page-scroll" href="#main">Home</a></li>
+                    <li><a class="page-scroll" href="#how">How It Works</a></li>
+                    <li><a class="page-scroll" href="#reviews">Reviews</a></li>
+                    <li><a class="page-scroll" href="#main">Get Notified</a></li>
+                </ul>
+            </div>
+          </div>
+        </nav><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+
+    <div class="main" id="main"><!-- Main Section-->
+
+      <div class="app-sub">
+        <div class="container">
+          <div class="app-sub-inner">
+
+          <div class="col-md-7 col-sm-7 nopadding">
+            <div class="app-sub-content">
+              <h1 class="wow fadeInLeft" data-wow-delay="0s">Make Your<br class="hidden-xs">Business Pitch<br class="hidden-xs">Roar.</h1>
+              <p class="wow fadeInLeft" data-wow-delay="0.1s">
+                Our AI and expert team analyzes your pitch deck, offering instant recommendations.<br><br>Join <u>523</u> other entrepreneurs who are ready to succeed.
+              </p>
+              <div class="form wow fadeInLeft" data-wow-delay="0.3s">
+              <form class="subscribe-form wow zoomIn" action="assets/php/subscribe.php" method="post" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded" autocomplete="off" novalidate>
+              <input class="mail" type="email" name="email" placeholder="Join the wait list" autocomplete="off"><input class="submit-button" type="submit" value="Subscribe">
+              </form>
+              <div class="success-message"></div>
+              <div class="error-message"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+
+      <div class="services-section text-center" id="how"><!-- Services section (small) with icons -->
+        <div class="container">
+          <div class="col-md-8 col-md-offset-2 nopadding">
+          <div class="services-content">
+            <h1 class="wow fadeInUp" data-wow-delay="0s">Gain Your Edge, Close Pitches With Confidence</h1>
+            <p class="wow fadeInUp" data-wow-delay="0.1s">
+              Startups we've worked with have gone on to raise seed rounds, sign on critical advisors, and more
+            </p>
+          </div>
+        </div>
+          <div class="col-md-12 text-center">
+          <div class="services">
+            <div class="col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
+              <div class="services-icon">
+                <img src="assets/logos/feature_icon.png" height="60" width="60" alt="Service" />
+              </div>
+              <div class="services-description">
+                <h1>Instant Results</h1>
+                <p>
+                  <span class="bolder">You get your results back within minutes</span>, not hours or days. Save valuable time, money, and hassle and focus on what you and your organization do best.
+                </p>
+              </div>
+            </div>
+            <div class="col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="services-icon">
+                <img class="icon-2" src="assets/logos/feature_icon_2.png" height="60" width="60" alt="Service" />
+              </div>
+              <div class="services-description">
+                <h1>Truly Personalized</h1>
+                <p>
+                  Our advanced machine learning algorithms combined with our expert coaches gives you <span class="bolder">insights into YOUR pitch and industry unmatched anywhere else</span>.
+                </p>
+              </div>
+            </div>
+            <div class="col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
+              <div class="services-icon">
+                <img class="icon-3" src="assets/logos/feature_icon_3.png" height="60" width="60" alt="Service" />
+              </div>
+              <div class="services-description">
+                <h1>Enterprise Security</h1>
+                <p>
+                  Your business data is <span class="bolder">secured by state-of-the-art data encryption</span>, and our team has years of experience in security technologies and compliance.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="flex-features" id="features">
+      <div class="container nopadding">
+        <div class="spacer"> </div>
+        <div class="flex-split"><!-- Feature section with flex layout -->
+          <div class="f-left">
+            <div class="left-content wow fadeInUp" data-wow-delay="0s">
+              <img class="img-responsive" src="assets/images/analysis.png" alt="" />
+            </div>
+          </div>
+          <div class="f-right">
+            <div class="right-content wow fadeInUp" data-wow-delay="0.3s">
+              <h2>Designed for Startups</h2>
+              <p>
+                We give you multiple revisions to improve your pitch deck each time you resubmit, as well as coach you and your team through the process as needed. Whether it's the order and number of your slides, the wording of your content, incorporating industry-specific assumptions, framing the problem and solution correctly, communicating the opportunity and your projections effectively, or ensuring design and aesthetic consistency, we have all of your bases covered.
+              </p>
+              <a class="btn btn-primary btn-action btn-fill page-scroll" href="#main">GET NOTIFIED</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- Footer Section -->
+  <div class="footer no-color">
+    <div class="container">
+      <div class="col-md-12 text-center">
+          <div class="footer-title">
+            <p>
+              Coming Soon in April 2017!
+            </p>
+          </div>
+          <div class="footer-text">
+            <p>
+              PitchBeast © 2017
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- Scroll To Top -->
+
+    <a id="back-top" class="back-to-top page-scroll" href="#main">
+    <i class="ion-ios-arrow-thin-up"></i>
+    </a>
+
+  <!-- Scroll To Top Ends-->
+
+    </div><!-- Main Section -->
+  </div><!-- Wrapper-->
+
+<!-- Jquery and Js Plugins -->
+  <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script>
+  <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/js/plugins.js"></script>
+  <script type="text/javascript" src="assets/js/menu.js"></script>
+  <script type="text/javascript" src="assets/js/custom.js"></script>
+  </body>
+</html>
