--- a/index.html
+++ b/index.html
@@ -184,6 +184,33 @@
       </div>
     </div>
 
+
+
+    <div class="testimonial-section">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-12">
+            <div class="testimonials owl-carousel owl-theme">
+              <div class="testimonial-single"><img class="img-circle img-bordered" src="assets/images/champagne.jpg" alt="Client Testimonoal" />
+                <div class="testimonial-text wow fadeInUp" data-wow-delay="0.2s">
+                  <p style="color: #666">Being able to communicate information about your company to investors and others is a required skill for all entrepreneurs. When seeking outside investment, a well-structured Pitch Deck and presentation is necessary to close the deal.</p>
+                  <h3 class="colored-heading" style="font-weight: 500">Glenn Champagne</h3>
+                  <h3>Director Emeritus, Launchpad Venture Group</h3>
+                </div>
+              </div>
+              <div class="testimonial-single"><img class="img-circle img-bordered" src="assets/images/graham.jpg" alt="Client Testimonoal" />
+                <div class="testimonial-text">
+                  <p>Professional investors hear a lot of pitches. After a while they all blur together. The first cut is simply to be one of those they remember.</p>
+                  <h3 class="colored-heading" style="font-weight: 500">Paul Graham</h3>
+                  <h3>Co-founder, Y Combinator</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   <!-- Footer Section -->
   <div class="footer no-color">
     <div class="container">
