Fix reviews link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <ul class="nav navbar-nav">
                     <li><a class="page-scroll" href="#main">Home</a></li>
                     <li><a class="page-scroll" href="#how">How It Works</a></li>
-                    <li><a class="page-scroll" href="#reviews">Reviews</a></li>
+                    <li><a class="page-scroll" href="#why">Why</a></li>
                     <li><a class="page-scroll" href="#main">Get Notified</a></li>
                 </ul>
             </div>
@@ -184,9 +184,7 @@
       </div>
     </div>
 
-
-
-    <div class="testimonial-section">
+    <div class="testimonial-section" id="why">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-12">
